Bump maven.surefire.plugin.version from 3.0.0-M5 to 3.0.0-M8 (#9255)